AutoMobKiller Improvements